- Update kotlin version - Update java version - Inject clock